# CalcApp

./: .replit  main.py  pyproject.toml
src/: main.py
